--- a/src/app/pages/charts/nvd3/nvd3.component.html
+++ b/src/app/pages/charts/nvd3/nvd3.component.html
@@ -1,9 +1,9 @@
 <section class="card">
   <div class="card-header">
     <div class="utils__title">
-      <strong>Chart.js</strong>
+      <strong>NVD3.js</strong>
       <a
-        href="https://github.com/emn178/angular2-chartjs"
+        href="http://krispo.github.io/angular-nvd3/#/"
         target="_blank"
         class="btn btn-sm btn-primary ml-4"
       >
@@ -15,12 +15,12 @@
     <div class="row">
       <div class="col-lg-6">
         <h5 class="text-black">
-          <strong>Line Chart</strong>
+          <strong>Cumulative Line Chart</strong>
         </h5>
         <p class="text-muted">
           Element: read
           <a
-            href="https://github.com/emn178/angular2-chartjs"
+            href="http://krispo.github.io/angular-nvd3/#/"
             target="_blank"
           >
             official documentation
@@ -30,17 +30,17 @@
           </a>
         </p>
         <div class="mb-5">
-          <chart [type]="'line'" [data]="lineData" [options]="lineOptions"></chart>
+          <nvd3 [options]="cumLineOptions" [data]="cumLineData"></nvd3>
         </div>
       </div>
       <div class="col-lg-6">
         <h5 class="text-black">
-          <strong>Bar Chart</strong>
+          <strong>Stacked Area Chart</strong>
         </h5>
         <p class="text-muted">
           Element: read
           <a
-            href="https://github.com/emn178/angular2-chartjs"
+            href="http://krispo.github.io/angular-nvd3/#/"
             target="_blank"
           >
             official documentation
@@ -50,7 +50,49 @@
           </a>
         </p>
         <div class="mb-5">
-          <chart [type]="'bar'" [data]="barData" [options]="barOptions"></chart>
+          <nvd3 [options]="stackedAreaOptions" [data]="stackedAreaData"></nvd3>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-6">
+        <h5 class="text-black">
+          <strong>Descrete Bar Chart</strong>
+        </h5>
+        <p class="text-muted">
+          Element: read
+          <a
+            href="http://krispo.github.io/angular-nvd3/#/"
+            target="_blank"
+          >
+            official documentation
+            <small>
+              <i class="icmn-link ml-1"></i>
+            </small>
+          </a>
+        </p>
+        <div class="mb-5">
+          <nvd3 [options]="descreteBarOptions" [data]="descreteBarData"></nvd3>
+        </div>
+      </div>
+      <div class="col-lg-6">
+        <h5 class="text-black">
+          <strong>Multi Bar Horizontal Chart</strong>
+        </h5>
+        <p class="text-muted">
+          Element: read
+          <a
+            href="http://krispo.github.io/angular-nvd3/#/"
+            target="_blank"
+          >
+            official documentation
+            <small>
+              <i class="icmn-link ml-1"></i>
+            </small>
+          </a>
+        </p>
+        <div class="mb-5">
+          <nvd3 [options]="multiBarHorOptions" [data]="multiBarHorData"></nvd3>
         </div>
       </div>
     </div>
@@ -62,7 +104,7 @@
         <p class="text-muted">
           Element: read
           <a
-            href="https://github.com/emn178/angular2-chartjs"
+            href="http://krispo.github.io/angular-nvd3/#/"
             target="_blank"
           >
             official documentation
@@ -72,17 +114,17 @@
           </a>
         </p>
         <div class="mb-5">
-          <chart [type]="'pie'" [data]="pieData" [options]="pieOptions"></chart>
+          <nvd3 [options]="pieOptions" [data]="pieData"></nvd3>
         </div>
       </div>
       <div class="col-lg-6">
         <h5 class="text-black">
-          <strong>Doughnut Chart</strong>
+          <strong>Donut Chart</strong>
         </h5>
         <p class="text-muted">
           Element: read
           <a
-            href="https://github.com/emn178/angular2-chartjs"
+            href="http://krispo.github.io/angular-nvd3/#/"
             target="_blank"
           >
             official documentation
@@ -92,29 +134,7 @@
           </a>
         </p>
         <div class="mb-5">
-          <chart [type]="'doughnut'" [data]="doughnutData" [options]="doughnutOptions"></chart>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-lg-6">
-        <h5 class="text-black">
-          <strong>Radar Chart</strong>
-        </h5>
-        <p class="text-muted">
-          Element: read
-          <a
-            href="https://github.com/emn178/angular2-chartjs"
-            target="_blank"
-          >
-            official documentation
-            <small>
-              <i class="icmn-link ml-1"></i>
-            </small>
-          </a>
-        </p>
-        <div class="mb-5">
-          <chart [type]="'radar'" [data]="radarData" [options]="radarOptions"></chart>
+          <nvd3 [options]="donutOptions" [data]="donutData"></nvd3>
         </div>
       </div>
     </div>
